--- a/web/frontend/form.css
+++ b/web/frontend/form.css
@@ -1,3 +1,180 @@
+@media(min-width:1200px){
+    .header-line
+    {
+        padding:10px 2%;
+    }
+    .footer{
+        padding:10px 10%;
+   }
+    .nav-item-yellow{
+        padding: 1% 8%;
+    }
+    .nav-item{
+        margin-right:40px; 
+    }
+
+}
+@media(min-width:1490px){
+    .main{
+        padding:20px 300px;
+    
+    }
+    .footer{
+        padding:10px 15%;
+   }
+}
+@media(max-width:1490px) {
+    .main{
+        padding:20px 15%;
+    
+    }
+}
+@media(max-width:1200px){
+    .header-line
+    .footer{
+        padding:10px 3%;
+    }
+    .main{
+        padding:20px 10%;
+    
+    }
+   
+    .nav-item-yellow{
+        padding: 1% 5%;
+    }
+    .nav-item{
+        margin-right:30px; 
+    }
+
+}
+@media (min-width:992px) {
+    .person-information-container{
+       
+        grid-gap: 90px;
+       
+    }
+    input[type="text"],
+input[type="email"],
+input[type="password"],
+select{
+    width: 460px;
+}
+    
+}
+@media(max-width:992px){
+    .header-line
+    .footer
+    {
+        padding:10px 3%;
+    }
+   
+    .main{
+        padding:20px 1%;
+    
+    }
+    .slider{
+        width: 380px;}
+    input[type="text"],
+input[type="email"],
+input[type="password"],
+select{
+    width: 380px;
+    font-size: 16px;}
+    .person-information-container{
+       
+        grid-gap: 45px;
+       
+    }
+    
+    .nav-item-yellow{
+        padding: 2% 5%;
+    }
+    .nav-item{
+        margin-right:10px; 
+    }
+    
+}
+@media (min-width:768px) {
+    .person-information-container{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);}
+    .slogan{
+        font-size: 70px;
+    }
+    
+    
+}
+@media(max-width:768px){
+    .header-line
+    .footer{
+        padding:10px 6%;
+    }
+    label{
+        font-size: 20px;
+    }
+    .slider{
+        width: 100%;}
+    input[type="text"],
+    input[type="email"],
+    input[type="password"],
+    select{
+        width: 100%;
+        }
+    .person-information-photo-block{
+        display: none;
+    }
+    .main{
+        padding:20px 2%;
+    }
+    .nav-item-yellow{
+        padding: 2% 3%;
+    }
+    .slogan{
+        font-size: 50px;
+    }
+    .nav-item-double{
+        display: none;
+    }
+    .footer-logo
+    {display: none;}
+}
+@media(min-width:480px){
+    .submit-button{
+        width: 300px;
+        font-size: 20px;
+    }
+    .footer-title-text{
+        font-size: 16px;
+    }
+    
+    .footer-text{
+        font-size: 14px;
+}
+@media(max-width:480px){
+    .submit-button{
+        width: 70%;
+        font-size: 70%;
+    }
+    .nav-item-yellow{
+        display: none;
+    }
+    .nav-item{
+        margin-right: 25%;
+    }
+    .footer-title-text{
+        
+        font-size: 12px;
+    }
+    
+    .footer-text{
+        font-weight: 600;
+        font-size: 10px;}
+}
+@media(max-width:350px){
+    .nav-item{
+        margin-right: 15%;
+    }
+}
 body{
     font-family: 'Montserrat';
     background: #333333;
@@ -12,13 +189,7 @@ body{
     box-shadow: 0px 20px 50px rgba(0, 0, 0, 0.25);
 }
 
-.header-line{
-    padding:10px 200px;
-    display:flex;
-    margin-right:10px;
-    align-items:center;
-    justify-content:space-around;
-}
+
 .nav {
 
 
@@ -26,20 +197,23 @@ body{
     font-size: 20px;
     line-height: 24px;
 
+    justify-content: center;
+    display: flex;
+    align-items: center;
+
 }
 .nav-item{
     color: #FFFFFF;
     text-decoration: none;
-    margin-right:20px;
 
 }
 
 .nav-item-yellow{
     border: 1.5px solid #FFD233;
-    padding: 15px 100px;
     text-decoration: none;
     color:#FFD233;
     border-radius:5px;
+  
 
 }
 .notion-item{
@@ -51,11 +225,13 @@ body{
     line-height: 24.38px;
     text-align: left;
     padding:5px;
+   
 
 }
 .notion{
     display:flex;
     align-items:center;
+  
 }
 .menu-button{
     width: 104px;
@@ -69,7 +245,7 @@ body{
 
 
     font-weight: 800;
-    font-size: 70px;
+   
     line-height: 85px;
 
     color: #FFFFFF;
@@ -78,10 +254,7 @@ body{
 
 }
 
-.main{
-    padding:20px 300px;
 
-}
 .water-text{
     text-align: end;
     padding: 10px;
@@ -115,9 +288,8 @@ body{
     color: #FFFFFF;
 }
 .person-information-container{
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    grid-gap: 90px;
+    
+    /*/grid-gap: 90px;*/
     margin-top: 25px;
     margin-bottom: 25px;
 }
@@ -134,7 +306,7 @@ input[type="text"],
 input[type="email"],
 input[type="password"],
 select{
-    width: 460px;
+    /*width: 460px;*/
     padding: 12px;
     border: 2px solid #222222;
     border-radius: 10px;
@@ -143,7 +315,7 @@ select{
     background: #D9D9D9;
     font-style: normal;
     font-weight: 600;
-    font-size: 16px;
+   
     line-height: 20px;
 }
 label {
@@ -176,28 +348,27 @@ input[type='radio'] {
     display: none;
 }
 
-/* Создать стилизованный вид для кружочка выбора */
+
 input[type='radio'] + label {
-    content: attr(data-label); /* Добавление текста из data-label атрибута */
+    content: attr(data-label); 
     position: relative;
-    top: -5px; /* Выравнивание текста */
+    top: -5px; 
     display: inline-block;
     cursor: pointer;
-    padding-left: 5px; /* Отступ для кружочка */
+    padding-left: 5px; 
 }
 
-/* Создать кружочек выбора */
+
 input[type='radio'] + label::before {
     content: '';
     display: inline-block;
-    width: 20px; /* Размер кружочка */
-    height: 20px; /* Размер кружочка */
-    border: 2px solid #333333; /* Обводка кружочка */
-    border-radius: 50%; /* Круглая форма кружочка */
-    margin-right: 15px; /* Отступ между кружочком и текстом */
+    width: 20px; 
+    height: 20px; 
+    border: 2px solid #333333; 
+    border-radius: 50%; 
+    margin-right: 15px; 
     background-color: #D9D9D9;
 }
-/* Изменить цвет кружочка при выборе */
 input[type='radio']:checked + label::before {
     width: 10px; /* Размер кружочка */
     height: 10px;
@@ -211,7 +382,6 @@ input[type='radio']:checked + label::before {
 }
 .slider{
     margin-top: 15px;
-    width: 400px;
     height: 100px;
     text-align: center;
 
@@ -249,7 +419,7 @@ input[type='radio']:checked + label::before {
     position: relative;
 }
 .social-network {
-    margin-bottom: 10px; /* You can adjust this value as needed */
+    margin-bottom: 10px; 
 }
 select { color: #999 }
 option { color: #333 }
@@ -258,7 +428,7 @@ option {
     font-size: 16px;
     font-family: Montserrat, sans-serif;
     border: 2px solid black;
-    border-radius: 10px; /* задаем радиус скругления углов рамки */
+    border-radius: 10px; 
     padding: 10px;
 
 }
@@ -272,22 +442,19 @@ input[type="checkbox"]{
     text-align: left;
 }
 .submit-button{
-    width: 300px;
+   
     height: 56px;
-    left: 328px;
-    top: 75px;
-    margin: 25px 300px;
+    margin: 25px auto; 
     background: #FFD233;
     border-radius: 10px;
     display: flex;
-    justify-content: center;  /* Центрирование по горизонтали */
+    justify-content: center;
     align-items: center;
     font-family: Montserrat, serif;
-    font-size: 20px;
+   
     font-weight: 500;
     line-height: 24.38px;
     text-align: center;
-
 }
 .footer{
     height: 175px;
@@ -300,22 +467,61 @@ input[type="checkbox"]{
     justify-content:space-around;
     background: #272727;
     box-shadow: 0px -25px 20px rgba(0, 0, 0, 0.25);
-    padding: 10px 200px;
+    /*padding: 10px 200px;*/
 }
 
 .footer-title-text{
     font-style: normal;
     font-weight: 600;
-    font-size: 16px;
+    /*font-size: 16px;*/
     line-height: 19px;
     color: #FFD233;
 }
 
 .footer-text{
     font-weight: 600;
-    font-size: 14px;
+    /*font-size: 14px;*/
     line-height: 17px;
     color: #B3B3B3;
 
 
 }
+form{
+    display: flex;
+    flex-direction: column;
+    gap: 5px; 
+}
+.menu-container {
+    position: relative;
+    display: inline-block;
+}
+
+.menu-button {
+    cursor: pointer;
+}
+
+.dropdown-menu {
+    display: none;
+    position: absolute;
+    top: 100%;
+    left: 0;
+    list-style: none;
+    padding: 0;
+    margin: 0 -40px;
+    background-color: #f9f9f9;
+    border: 1px solid #ccc;
+}
+
+.dropdown-menu li {
+    padding: 10px;
+}
+
+.dropdown-menu li a {
+    text-decoration: none;
+    color: #333;
+}
+
+.dropdown-menu li:hover {
+    background-color: #e0e0e0;
+}
+
