--- a/web/frontend/login-form/styles.css
+++ b/web/frontend/login-form/styles.css
@@ -1,61 +1,140 @@
-body {
-    background-color: #FFD233;
-    color: #FFD233;
-    font-family: Arial, sans-serif;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-    margin: 0;
+@font-face {
+    font-family: 'Montserrat';
+    src: url('../fonts/Montserrat-Regular.woff2') format('woff2');
+    font-weight: 400;
+    font-style: normal;
+    font-display: swap;
+}
+
+@font-face {
+    font-family: 'Montserrat';
+    src: url('../fonts/Montserrat-Medium.woff2') format('woff2');
+    font-weight: 500;
+    font-style: normal;
+    font-display: swap;
+}
+
+@font-face {
+    font-family: 'Montserrat';
+    src: url('../fonts/Montserrat-ExtraBold.woff2') format('woff2');
+    font-weight: 800;
+    font-style: normal;
+    font-display: swap;
+}
+
+@font-face {
+    font-family: 'Montserrat';
+    src: url('../fonts/Montserrat-SemiBold.woff2') format('woff2');
+    font-weight: 600;
+    font-style: normal;
+    font-display: swap;
+}
+
+@font-face {
+    font-family: 'Montserrat';
+    src: url('../fonts/Montserrat-Bold.woff2') format('woff2');
+    font-weight: 700;
+    font-style: normal;
+    font-display: swap;
+}
+
+@font-face {
+    font-family: 'Montserrat';
+    src: url('../fonts/Montserrat-Black.woff2') format('woff2');
+    font-weight: 900;
+    font-style: normal;
+    font-display: swap;
+}
+
+.login {
+    display: none; /* По умолчанию скрыто */
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgba(0,0,0,0.4);
+    font: 500 20px Montserrat, sans-serif;
 }
 
 .login-container {
     background-color: #333333;
     padding: 20px;
-    border-radius: 8px;
+    border-radius: 12px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    width: 480px;
+    width: 500px;
+    margin: 15% auto;
 }
 
 .login-container h2 {
-    margin-top: 0;
+    margin-top: 5px;
     text-align: center;
+    color: #FFD233;
+    margin-bottom: 20px;
 }
 
 .form-group {
     margin-bottom: 15px;
 }
 
+.personal-form-label {
+    color: #fff;
+    align-self: start;
+    margin-left: 10px;
+    font: 600 16px Montserrat, sans-serif;
+}
+
+.personal-form-input-login {
+    border-radius: 10px;
+    border: 2px solid rgba(34, 34, 34, 1);
+    background-color: #d9d9d9;
+    font: 600 16px Montserrat, sans-serif;
+    color: rgba(51, 51, 51, 0.5);
+}
+
+.personal-form-input-login.password-filled {
+    font-family: monospace; /* Используем моноширинный шрифт */
+    letter-spacing: 5px; /* Устанавливаем расстояние между символами */
+    -webkit-text-security: disc; /* Заменяем текст на круги (может не работать в некоторых браузерах) */
+    color: #333333;
+}
+
+.filled {
+    font: 600 16px Montserrat, sans-serif;
+    color: #333333;
+}
+
 .form-group label {
-    display: block;
+
     margin-bottom: 5px;
     color: #FFD233;
 }
 
 .form-group input {
-    width: 464px;
-    height: 30px;
-    padding: 8px;
+    width: 100%;
+    height: 51px;
+    padding: 8px 15px;
     border: none;
     border-radius: 10px;
     background-color: #D9D9D9;
-    margin-top: 5px;
+    margin-top: 6px;
 }
 
-button {
-    position: relative;
-    font-family: Montserrat, sans-serif;
+.center-button {
+    margin: 24px auto 0 auto;
+    display: block;
+    font: 500 20px Montserrat, sans-serif;
     border-radius: 10px;
-    justify-content: center;
-    width: 100%;
-    padding: 16px 29px;
+    align-content: center;
+    width: 60%;
     background-color: #FFD233;
-    color: #333333;
+    color: #000;
     border: none;
-    cursor: pointer;
-    margin-top: 10px;
+    height: 60px;
 }
 
-button:hover {
-    background-color: #555555;
+.center-button:hover {
+    background-color: #ffc800;
 }
