--- a/web/frontend/apartment-page/styles.css
+++ b/web/frontend/apartment-page/styles.css
@@ -429,6 +429,15 @@ a:hover {
     color: rgba(0, 0, 0, 0.3);
 }
 
+.login-link {
+    color: rgb(136, 197, 0);
+    font-family: Inter, sans-serif;
+}
+
+.login-link:hover {
+    color: rgb(0, 220, 0);
+}
+
 .logout-link {
     color: rgba(255, 0, 0, 0.8);
     font-family: Inter, sans-serif;
