--- a/web/frontend/registration-form/styles.css
+++ b/web/frontend/registration-form/styles.css
@@ -437,6 +437,15 @@ a:hover {
     color: rgb(0, 220, 0);
 }
 
+.logout-link {
+    color: rgba(255, 0, 0, 0.8);
+    font-family: Inter, sans-serif;
+}
+
+.logout-link:hover {
+    color: rgba(255, 0, 0, 1);
+}
+
 /* body */
 
 .travel-russia {
@@ -679,6 +688,12 @@ a:hover {
     font: 600 16px Montserrat, sans-serif;
     color: #333333;
 }
+
+/* сделаем выпадающий список посноснее */
+select.custom-input option {
+    font-size: 17.5px;
+}
+
 
 
 /* 2-nd part of form */
